--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-[![Netlify Status](https://api.netlify.com/api/v1/badges/91057bf4-a5e5-462a-856a-1b94d15dc4a3/deploy-status)](https://app.netlify.com/projects/elegant-capybara-01f5b2/deploys)
+index.html
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
